# example-ci-project

./: .gitignore  .gitlab-ci.yml  Cargo.toml
.github/workflows/: rust.yml
node_client/: Cargo.toml
node_client/src/: main.rs
src/: lib.rs  main.rs
