[package]
name = "node_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { git = "https://github.com/justinfrevert/risc0" }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
